# audio-fingerprinting

./: .gitignore  README.md  TECHNICAL.md  USAGE.md  fingerprinting.py  pyproject.toml  requirements.txt
app/: audio_fingerprinter.py  fingerprint.py  server.py
app/pages/: home.html
docs/: index.md
kotlin/: README.md
kotlin/src/main/kotlin/com/audiofinger/: AudioFingerprinter.kt
tests/: test_fingerprint.py  test_fingerprint_extended.py
