[project]
name = "audio-fingerprinting"
version = "0.1.0"
description = "An audio fingerprinting system that identifies short audio clips by matching spectral signatures"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "scikit-learn>=1.7.2",
    "numba>=0.62.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

